--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ classifiers = [
 dependencies = [
     "pypng>=0.20220715.0",
     "unidata-blocks>=0.0.15",
+    "PyYAML>=6.0.2",
 ]
 
 [project.urls]
