--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,10 +34,7 @@ source = "https://github.com/TakWolf/pixel-font-knife"
 issues = "https://github.com/TakWolf/pixel-font-knife/issues"
 
 [tool.pytest.ini_options]
-pythonpath = [
-    ".",
-    "src",
-]
+pythonpath = "src"
 addopts = [
     "--import-mode=importlib",
 ]
