--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 dependencies = [
     "pypng>=0.20220715.0",
     "unidata-blocks>=0.0.16",
-    "PyYAML>=6.0.2",
+    "pyyaml>=6.0.2",
 ]
 
 [project.urls]
